<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tour_guides"
            android:icon="@drawable/tour_24"
            android:title="@string/find_tour_guides" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/account_balance_wallet_24"
            android:title="@string/wallet" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/person_24"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_24"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_24"
                android:title="@string/about" />
        </menu>
    </item>
</menu>