<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity">


<!--    <ImageView-->
<!--        android:id="@+id/imageView4"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:contentDescription="@string/from_wallet_back_to_dashboard"-->
<!--        android:rotationY="-180"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:srcCompat="@drawable/arrow_right_alt_24" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView12"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:gravity="center_horizontal|center_vertical"-->
<!--        android:text="@string/wallet"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="22sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/imageView4"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/imageView4"-->
<!--        app:layout_constraintTop_toTopOf="@+id/imageView4" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/purple_700"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/refill_account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5867"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_12_12_2021"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/cardview_dark_background" />

            <TextView
                android:id="@+id/holdinh_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ugx_245000_00"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/refill_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_btn"
        android:contentDescription="@string/refill_button"
        android:elevation="10dp"
        android:src="@drawable/approval_24"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/transfer_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_btn"
        android:contentDescription="@string/transfer_funds"
        android:elevation="10dp"
        android:src="@drawable/payment_24"
        app:layout_constraintBottom_toBottomOf="@+id/refill_btn"
        app:layout_constraintEnd_toStartOf="@+id/more_btn"
        app:layout_constraintStart_toEndOf="@+id/refill_btn"
        app:layout_constraintTop_toTopOf="@+id/refill_btn" />

    <ImageButton
        android:id="@+id/more_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_btn"
        android:contentDescription="@string/do_more_with_wallet"
        android:elevation="10dp"
        android:src="@drawable/more_vert_24"
        app:layout_constraintBottom_toBottomOf="@+id/transfer_btn"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/transfer_btn" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/refill"
        app:layout_constraintEnd_toEndOf="@+id/refill_btn"
        app:layout_constraintStart_toStartOf="@+id/refill_btn"
        app:layout_constraintTop_toBottomOf="@+id/refill_btn" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/transfer"
        app:layout_constraintEnd_toEndOf="@+id/transfer_btn"
        app:layout_constraintStart_toStartOf="@+id/transfer_btn"
        app:layout_constraintTop_toBottomOf="@+id/transfer_btn" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/more"
        app:layout_constraintEnd_toEndOf="@+id/more_btn"
        app:layout_constraintStart_toStartOf="@+id/more_btn"
        app:layout_constraintTop_toBottomOf="@+id/more_btn" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#19424242"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />
</androidx.constraintlayout.widget.ConstraintLayout>