<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TourGuideAccount.TourGuideProfile">

    <LinearLayout
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/profile_bg"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tour_guide_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/tour_guide_name"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/no_alerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/notifications_icon"
                android:src="@drawable/no_notifications_24"
                app:layout_constraintBottom_toBottomOf="@+id/tour_guide_profile_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tour_guide_profile_name" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tg_profile_pic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/person_24"
                app:civ_border_color="@color/pink"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tour_guide_profile_name"
                app:layout_constraintTop_toBottomOf="@+id/tour_guide_profile_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/tg_closed_tours"
        style="@style/Theme.FilledButtons"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:src="@drawable/close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tg_ongoing_tours"
        style="@style/Theme.FilledButtons"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:src="@drawable/ongoing_24"
        app:layout_constraintEnd_toStartOf="@id/tg_closed_tours"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tg_edit_profile"
        style="@style/Theme.FilledButtons"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:src="@drawable/edit_24"
        app:layout_constraintEnd_toStartOf="@id/tg_ongoing_tours"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/closed_tours"
        app:layout_constraintEnd_toEndOf="@+id/tg_closed_tours"
        app:layout_constraintStart_toStartOf="@+id/tg_closed_tours"
        app:layout_constraintTop_toBottomOf="@+id/tg_closed_tours" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/on_going_tour"
        app:layout_constraintEnd_toEndOf="@+id/tg_ongoing_tours"
        app:layout_constraintStart_toStartOf="@+id/tg_ongoing_tours"
        app:layout_constraintTop_toBottomOf="@+id/tg_ongoing_tours" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit_profile"
        app:layout_constraintEnd_toEndOf="@+id/tg_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/tg_edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/tg_edit_profile" />

    <Button
        android:id="@+id/tg_wallet"
        style="@style/Theme.FilledButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tour_history"
        app:layout_constraintEnd_toEndOf="@+id/tg_wallet"
        app:layout_constraintStart_toStartOf="@+id/tg_wallet"
        app:layout_constraintTop_toBottomOf="@+id/tg_wallet" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/wallet_transactions_history"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <Button
        android:id="@+id/tg_pending_alerts"
        style="@style/Theme.FilledButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pending_alerts"
        app:layout_constraintBottom_toBottomOf="@+id/tg_wallet"
        app:layout_constraintStart_toEndOf="@+id/tg_wallet"
        app:layout_constraintTop_toTopOf="@+id/tg_wallet" />

</androidx.constraintlayout.widget.ConstraintLayout>